Updated Drupal 7 Nginx config

--- a/drupal7.conf
+++ b/drupal7.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
 
     root /var/www/html/;
-    index index.php index.html index.htm;
+    index index.php;
 
     fastcgi_keep_conn on;
     fastcgi_index index.php;
@@ -117,49 +117,9 @@ server {
         fastcgi_pass app;
     }
 
-    location = /api.php {
-        include fastcgi_params;
-        fastcgi_param QUERY_STRING q=$uri&$args;
-        fastcgi_param SCRIPT_NAME /api.php;
-        fastcgi_param SCRIPT_FILENAME $document_root/api.php;
-        fastcgi_hide_header 'X-Drupal-Cache';
-        fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
-    }
-
-    location = /install.php {
-        include fastcgi_params;
-        fastcgi_param QUERY_STRING q=$uri&$args;
-        fastcgi_param SCRIPT_NAME /install.php;
-        fastcgi_param SCRIPT_FILENAME $document_root/install.php;
-        fastcgi_hide_header 'X-Drupal-Cache';
-        fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
-    }
-
-    location = /xmlrpc.php {
-        include fastcgi_params;
-        fastcgi_param QUERY_STRING q=$uri&$args;
-        fastcgi_param SCRIPT_NAME /xmlrpc.php;
-        fastcgi_param SCRIPT_FILENAME $document_root/xmlrpc.php;
-        fastcgi_hide_header 'X-Drupal-Cache';
-        fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
-    }
-
-    location = /authorize.php {
-        include fastcgi_params;
-        fastcgi_param QUERY_STRING q=$uri&$args;
-        fastcgi_param SCRIPT_NAME /authorize.php;
-        fastcgi_param SCRIPT_FILENAME $document_root/authorize.php;
-        fastcgi_hide_header 'X-Drupal-Cache';
-        fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
-    }
-
     location = /cron.php {
         include fastcgi_params;
-        fastcgi_param QUERY_STRING q=$uri&$args;
+        fastcgi_param QUERY_STRING $args;
         fastcgi_param SCRIPT_NAME /cron.php;
         fastcgi_param SCRIPT_FILENAME $document_root/cron.php;
         fastcgi_hide_header 'X-Drupal-Cache';
@@ -169,9 +129,29 @@ server {
 
     location = /update.php {
         include fastcgi_params;
-        fastcgi_param QUERY_STRING q=$uri&$args;
+        fastcgi_param QUERY_STRING $args;
         fastcgi_param SCRIPT_NAME /update.php;
         fastcgi_param SCRIPT_FILENAME $document_root/update.php;
+        fastcgi_hide_header 'X-Drupal-Cache';
+        fastcgi_hide_header 'X-Generator';
+        fastcgi_pass app;
+    }
+
+    location = /install.php {
+        include fastcgi_params;
+        fastcgi_param QUERY_STRING $args;
+        fastcgi_param SCRIPT_NAME /install.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/install.php;
+        fastcgi_hide_header 'X-Drupal-Cache';
+        fastcgi_hide_header 'X-Generator';
+        fastcgi_pass app;
+    }
+
+    location = /authorize.php {
+        include fastcgi_params;
+        fastcgi_param QUERY_STRING $args;
+        fastcgi_param SCRIPT_NAME /authorize.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/authorize.php;
         fastcgi_hide_header 'X-Drupal-Cache';
         fastcgi_hide_header 'X-Generator';
         fastcgi_pass app;
@@ -240,4 +220,5 @@ server {
         upload_progress_json_output;
         report_uploads uploads;
     }
+
 }
