Fixed X-Content header, added /.well-known support

--- a/drupal7.conf
+++ b/drupal7.conf
@@ -204,6 +204,10 @@ server {
         try_files /favicon.ico @empty;
     }
 
+    location ~* ^/.well-known/ {
+        allow all;
+    }
+
     location @empty {
         expires 30d;
         empty_gif;
