--- a/drupal8.conf
+++ b/drupal8.conf
@@ -204,6 +204,10 @@ server {
         try_files /favicon.ico @empty;
     }
 
+    location ~* ^/.well-known/ {
+        allow all;
+    }
+
     location @empty {
         expires 30d;
         empty_gif;
