--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
 
     add_header                          X-XSS-Protection '1; mode=block';
     add_header                          X-Frame-Options SAMEORIGIN;
-    add_header                          X-Content-Options nosniff;
+    add_header                          X-Content-Type-Options nosniff;
 
     map $http_x_forwarded_proto $fastcgi_https {
         default $https;
