Use just one drupal config, merge 7 and 8 version

--- a/drupal.conf
+++ b/drupal.conf
@@ -118,6 +118,17 @@ server {
         fastcgi_pass app;
     }
 
+    location = /cron.php {
+        include fastcgi_params;
+        fastcgi_param QUERY_STRING $args;
+        fastcgi_param SCRIPT_NAME /cron.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/cron.php;
+        fastcgi_hide_header 'X-Drupal-Cache';
+        fastcgi_hide_header 'X-Generator';
+        fastcgi_pass app;
+    }
+
+    # Drupal 8
     location = /cron {
         include fastcgi_params;
         fastcgi_param QUERY_STRING q=$uri&$args;
@@ -138,6 +149,17 @@ server {
         fastcgi_pass app;
     }
 
+    location = /install.php {
+        include fastcgi_params;
+        fastcgi_param QUERY_STRING $args;
+        fastcgi_param SCRIPT_NAME /install.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/install.php;
+        fastcgi_hide_header 'X-Drupal-Cache';
+        fastcgi_hide_header 'X-Generator';
+        fastcgi_pass app;
+    }
+
+    # Drupal 8
     location = /core/install.php {
         include fastcgi_params;
         fastcgi_param QUERY_STRING $args;
@@ -148,6 +170,17 @@ server {
         fastcgi_pass app;
     }
 
+    location = /authorize.php {
+        include fastcgi_params;
+        fastcgi_param QUERY_STRING $args;
+        fastcgi_param SCRIPT_NAME /authorize.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/authorize.php;
+        fastcgi_hide_header 'X-Drupal-Cache';
+        fastcgi_hide_header 'X-Generator';
+        fastcgi_pass app;
+    }
+
+    # Drupal 8
     location = /core/authorize.php {
         include fastcgi_params;
         fastcgi_param QUERY_STRING $args;
