--- a/drupal8.conf
+++ b/drupal8.conf
@@ -66,7 +66,7 @@ server {
             try_files $uri @drupal;
         }
 
-        location ~* ^.+\.(?:css|cur|js|jpe?g|gif|htc|ico|png|xml|otf|ttf|eot|woff|svg)$ {
+        location ~* ^.+\.(?:css|cur|js|jpe?g|gif|htc|ico|png|xml|otf|ttf|eot|woff|woff2|svg)$ {
             access_log off;
             expires 30d;
             tcp_nodelay off;
@@ -225,5 +225,4 @@ server {
         upload_progress_json_output;
         report_uploads uploads;
     }
-
 }
