--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 user                                    nginx;
 worker_processes                        1;
-error_log                               /var/log/nginx/error.log warn;
+error_log                               /proc/self/fd/2;
 pid                                     /var/run/nginx.pid;
 
 events {
@@ -19,11 +19,7 @@ http {
     set_real_ip_from                    0.0.0.0/32;
     real_ip_header                      X-Real-IP;
 
-    log_format  special                 '$http_x_real_ip - $remote_user [$time_local] "$request" '
-                                        '$status $body_bytes_sent "$http_referer" '
-                                        '"$http_user_agent" '
-                                        '$request_time $upstream_response_time $pipe';
-    access_log                          /var/log/nginx/access.log special;
+    access_log                          /proc/self/fd/2;
 
     port_in_redirect                    off;
     send_timeout                        600;
