--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,12 @@ http {
     set_real_ip_from                    0.0.0.0/32;
     real_ip_header                      X-Real-IP;
 
-    access_log                          /proc/self/fd/2;
+    log_format                          special '$http_x_real_ip - $remote_user [$time_local] "$request" '
+                                        '$status $body_bytes_sent "$http_referer" '
+                                        '"$http_user_agent" '
+                                        '$request_time $upstream_response_time $pipe';
+
+    access_log                          /proc/self/fd/2 special;
 
     port_in_redirect                    off;
     send_timeout                        600;
