--- a/nginx.conf
+++ b/nginx.conf
@@ -15,17 +15,7 @@ http {
     fastcgi_intercept_errors            on;
     fastcgi_read_timeout                900;
     include                             fastcgi_params;
-
-    set_real_ip_from                    0.0.0.0/32;
-    real_ip_header                      X-Real-IP;
-
-    log_format                          special '$http_x_real_ip - $remote_user [$time_local] "$request" '
-                                        '$status $body_bytes_sent "$http_referer" '
-                                        '"$http_user_agent" '
-                                        '$request_time $upstream_response_time $pipe';
-
-    access_log                          /proc/self/fd/2 special;
-
+    access_log                          /proc/self/fd/2;
     port_in_redirect                    off;
     send_timeout                        600;
     sendfile                            on;
