Updated upstream name

--- a/nginx.conf
+++ b/nginx.conf
@@ -54,8 +54,8 @@ http {
         ~^/(?<no_slash>.*)$ $no_slash;
     }
 
-    upstream app {
-        server app:9000;
+    upstream php {
+        server php:9000;
     }
 
     include /etc/nginx/conf.d/*.conf;
