Updated upstream name

--- a/drupal7.conf
+++ b/drupal7.conf
@@ -20,7 +20,7 @@ server {
             fastcgi_param SCRIPT_FILENAME $document_root/index.php;
             fastcgi_hide_header 'X-Drupal-Cache';
             fastcgi_hide_header 'X-Generator';
-            fastcgi_pass app;
+            fastcgi_pass upstream;
             log_not_found off;
         }
 
@@ -94,7 +94,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_hide_header 'X-Drupal-Cache';
         fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
+        fastcgi_pass upstream;
         track_uploads uploads 60s;
     }
 
@@ -105,7 +105,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_hide_header 'X-Drupal-Cache';
         fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
+        fastcgi_pass upstream;
     }
 
     location = /index.php {
@@ -115,7 +115,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_hide_header 'X-Drupal-Cache';
         fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
+        fastcgi_pass upstream;
     }
 
     location = /cron.php {
@@ -125,7 +125,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root/cron.php;
         fastcgi_hide_header 'X-Drupal-Cache';
         fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
+        fastcgi_pass upstream;
     }
 
     location = /update.php {
@@ -135,7 +135,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root/update.php;
         fastcgi_hide_header 'X-Drupal-Cache';
         fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
+        fastcgi_pass upstream;
     }
 
     location = /install.php {
@@ -145,7 +145,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root/install.php;
         fastcgi_hide_header 'X-Drupal-Cache';
         fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
+        fastcgi_pass upstream;
     }
 
     location = /authorize.php {
@@ -155,7 +155,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root/authorize.php;
         fastcgi_hide_header 'X-Drupal-Cache';
         fastcgi_hide_header 'X-Generator';
-        fastcgi_pass app;
+        fastcgi_pass upstream;
     }
 
     location ^~ /.bzr {
