--- a/nginx.conf
+++ b/nginx.conf
@@ -54,7 +54,7 @@ http {
         ~^/(?<no_slash>.*)$ $no_slash;
     }
 
-    upstream php {
+    upstream upstream {
         server php:9000;
     }
 
