Integrated NGINX_UPSTREAM_NAME env var

--- a/nginx.conf
+++ b/nginx.conf
@@ -55,7 +55,7 @@ http {
     }
 
     upstream upstream {
-        server php:9000;
+        server UPSTREAM_NAME:9000;
     }
 
     include /etc/nginx/conf.d/*.conf;
