Disable open_file_cache for js/css
We shouldn't cache that as it changes frequently on development environment

--- a/drupal7.conf
+++ b/drupal7.conf
@@ -66,7 +66,7 @@ server {
             try_files $uri @drupal;
         }
 
-        location ~* ^.+\.(?:css|cur|js|jpe?g|gif|htc|ico|png|xml|otf|ttf|eot|woff|woff2|svg)$ {
+        location ~* ^.+\.(?:cur|jpe?g|gif|htc|ico|png|xml|otf|ttf|eot|woff|woff2|svg)$ {
             access_log off;
             expires 30d;
             tcp_nodelay off;
@@ -76,6 +76,13 @@ server {
             open_file_cache_errors off;
         }
 
+        location ~* ^.+\.(?:css|js)$ {
+            access_log off;
+            expires 30d;
+            tcp_nodelay off;
+            open_file_cache off;
+        }
+        
         location ~* ^.+\.(?:pdf|pptx?)$ {
             expires 30d;
             tcp_nodelay off;
