--- a/drupal7.conf
+++ b/drupal7.conf
@@ -221,7 +221,7 @@ server {
         rewrite ^ $upload_form_uri?X-Progress-ID=$upload_id;
     }
 
-    location ^~ /progress {
+    location ~ ^/progress$ {
         upload_progress_json_output;
         report_uploads uploads;
     }
