Fixed bug in update and auth locations

--- a/drupal8.conf
+++ b/drupal8.conf
@@ -135,7 +135,7 @@ server {
         fastcgi_pass upstream;
     }
 
-    location = /update.php {
+    location ~* ^/update.php {
         include fastcgi_params;
         fastcgi_param QUERY_STRING $args;
         fastcgi_param SCRIPT_NAME /update.php;
@@ -155,7 +155,7 @@ server {
         fastcgi_pass upstream;
     }
 
-    location = /core/authorize.php {
+    location ~* ^/core/authorize.php {
         include fastcgi_params;
         fastcgi_param QUERY_STRING $args;
         fastcgi_param SCRIPT_NAME /core/authorize.php;
