Fixed missing CSS styling for navigation elements

--- a/drupal8.conf
+++ b/drupal8.conf
@@ -117,7 +117,7 @@ server {
 
     location = /index.php {
         include fastcgi_params;
-        fastcgi_param QUERY_STRING q=$uri&$args;
+        fastcgi_param QUERY_STRING $query_string;
         fastcgi_param SCRIPT_NAME /index.php;
         fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_hide_header 'X-Drupal-Cache';
