Updated nginx configs

--- a/drupal7.conf
+++ b/drupal7.conf
@@ -40,6 +40,15 @@ server {
             try_files $uri @drupal;
         }
 
+        location ~* ^/sites/.*/files/.*\.txt {
+            expires 30d;
+            tcp_nodelay off;
+            open_file_cache max=3000 inactive=120s;
+            open_file_cache_valid 45s;
+            open_file_cache_min_uses 2;
+            open_file_cache_errors off;
+        }
+    
         location ^~ /sites/.*/files/advagg_css/ {
             expires max;
             add_header ETag '';
@@ -66,7 +75,7 @@ server {
             try_files $uri @drupal;
         }
 
-        location ~* ^.+\.(?:cur|jpe?g|gif|htc|ico|png|xml|otf|ttf|eot|woff|woff2|svg)$ {
+        location ~* ^.+\.(?:css|cur|js|jpe?g|gif|htc|ico|png|xml|otf|ttf|eot|woff|woff2|svg)$ {
             access_log off;
             expires 30d;
             tcp_nodelay off;
@@ -82,7 +91,7 @@ server {
             tcp_nodelay off;
             open_file_cache off;
         }
-        
+
         location ~* ^.+\.(?:pdf|pptx?)$ {
             expires 30d;
             tcp_nodelay off;
