--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,8 @@ events {
 http {
     include                             /etc/nginx/mime.types;
     default_type                        application/octet-stream;
-    fastcgi_buffers                     256 4k;
+    fastcgi_buffers                     8 16k;
+    fastcgi_buffer_size                 32k;
     fastcgi_intercept_errors            on;
     fastcgi_read_timeout                900;
     include                             fastcgi_params;
