--- a/1.10/Dockerfile
+++ b/1.10/Dockerfile
@@ -17,6 +17,7 @@ RUN addgroup -S -g 82 www-data && \
     apk --update add \
         bash \
         wget \
+        pcre \
         ca-certificates \
         libressl-dev \
         pcre-dev \
