Add log error to file

--- a/1.10/nginx.conf
+++ b/1.10/nginx.conf
@@ -1,6 +1,6 @@
 user                                    nginx;
 worker_processes                        1;
-error_log                               /proc/self/fd/2;
+error_log                               /var/log/nginx/error.log;
 pid                                     /var/run/nginx.pid;
 
 events {
@@ -16,7 +16,7 @@ http {
     fastcgi_intercept_errors            on;
     fastcgi_read_timeout                900;
     include                             fastcgi_params;
-    access_log                          /proc/self/fd/2;
+    access_log                          /var/log/nginx/access.log;
     port_in_redirect                    off;
     send_timeout                        600;
     sendfile                            on;
