--- a/8/1.10/test/docker-compose.yml
+++ b/8/1.10/test/docker-compose.yml
@@ -6,11 +6,13 @@ services:
     ports:
       - 8080:80
     environment:
-      NGINX_BACKEND_HOST: php
+      NGINX_BACKEND_HOST: drupal
       NGINX_BACKEND_PORT: 9000
     depends_on:
-      - php
-  php:
-    image: php:fpm-alpine
+      - drupal
+    volumes_from:
+      - drupal:ro
+  drupal:
+    image: drupal:8-fpm
     volumes:
-      - ./index.php:/var/www/html/index.php
+      - /var/www/html
