--- a/7/1.10/test/docker-compose.yml
+++ b/7/1.10/test/docker-compose.yml
@@ -7,12 +7,14 @@ services:
       - 8080:80
     environment:
       NGINX_BACKEND_HOST: drupal
-      NGINX_BACKEND_PORT: 9000
     depends_on:
       - drupal
-    volumes_from:
-      - drupal:ro
-  drupal:
-    image: drupal:7-fpm
     volumes:
-      - /var/www/html
+      - codebase:/var/www/html:ro
+  drupal:
+    image: drupal:8-fpm
+    volumes:
+      - codebase:/var/www/html
+
+volumes:
+  codebase:
