Drop volume read-only flag

--- a/6/1.10/test/docker-compose.yml
+++ b/6/1.10/test/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     depends_on:
       - drupal
     volumes:
-      - codebase:/var/www/html:ro
+      - codebase:/var/www/html
   drupal:
     image: drupal:8-fpm
     volumes:
