--- a/6/1.10/Dockerfile
+++ b/6/1.10/Dockerfile
@@ -3,8 +3,4 @@ FROM wodby/nginx:1.10
 RUN rm /etc/gotpl/default-vhost.conf.tpl
 
 COPY drupal.conf.tpl /etc/gotpl/
-COPY docker-entrypoint-drupal.sh /
-
-ENTRYPOINT ["/docker-entrypoint-drupal.sh"]
-
-CMD ["nginx"]
+COPY init/* /docker-entrypoint-init.d/
