--- a/6/1.10/Dockerfile
+++ b/6/1.10/Dockerfile
@@ -1,6 +1,9 @@
 FROM wodby/nginx:1.10
 
-RUN rm /etc/gotpl/default-vhost.conf.tpl
+ENV WODBY_DIR_FILES /mnt/files
+
+RUN rm /etc/gotpl/default-vhost.conf.tpl && \
+    mkdir -p $WODBY_DIR_FILES && \
 
 COPY drupal.conf.tpl /etc/gotpl/
 COPY init/* /docker-entrypoint-init.d/
