--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 env:
   global:
     - DOCKER_COMPOSE_VERSION=1.10.0
+    - DOCKER_VERSION=17.06.2
   matrix:
     - DRUPAL=8 LINE=1.x NGINX=1.13
     - DRUPAL=7 LINE=1.x NGINX=1.13
@@ -18,7 +19,7 @@ env:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce=17.06.2~ce-0~ubuntu
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce="${DOCKER_VERSION}~ce-0~ubuntu"
 
 install:
   - sudo rm /usr/local/bin/docker-compose
