--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ env:
     - DOCKER_COMPOSE_VERSION=1.10.0
     - DOCKER_VERSION=17.06.2
   matrix:
-    - DRUPAL=8 LINE=1.x NGINX=1.13
-    - DRUPAL=7 LINE=1.x NGINX=1.13
-    - DRUPAL=6 LINE=1.x NGINX=1.13
-    - DRUPAL=8 LINE=1.x NGINX=1.12
-    - DRUPAL=7 LINE=1.x NGINX=1.12
-    - DRUPAL=6 LINE=1.x NGINX=1.12
+    - DRUPAL=8 LINE=1.x NGINX_VER=1.13
+    - DRUPAL=7 LINE=1.x NGINX_VER=1.13
+    - DRUPAL=6 LINE=1.x NGINX_VER=1.13
+    - DRUPAL=8 LINE=1.x NGINX_VER=1.12
+    - DRUPAL=7 LINE=1.x NGINX_VER=1.12
+    - DRUPAL=6 LINE=1.x NGINX_VER=1.12
 
 before_install:
   - sudo apt-get update
@@ -37,6 +37,6 @@ after_success: |
     make release
 
     if [ -n "$TRAVIS_TAG" ]; then
-      make VERSION="$DRUPAL-$NGINX-$TRAVIS_TAG" release
+      make VERSION="$DRUPAL-$NGINX_VER-$TRAVIS_TAG" release
     fi
   fi
