--- a/7/1.x/Dockerfile
+++ b/7/1.x/Dockerfile
@@ -1,18 +1,12 @@
 ARG NGINX_VER
 
-FROM wodby/nginx:${NGINX_VER}
-
-ENV WODBY_DIR_FILES="/mnt/files"
+FROM wodby/php-nginx:${NGINX_VER}
 
 USER root
 
-RUN addgroup -S -g 82 www-data && \
-    adduser -u 82 -D -S -s /bin/bash -G www-data www-data && \
-    addgroup nginx www-data && \
-    rm /etc/gotpl/default-vhost.conf.tpl && \
-    mkdir -p $WODBY_DIR_FILES
+RUN rm /etc/gotpl/default-vhost.conf.tpl
 
-USER nginx
+USER www-data
 
 COPY templates /etc/gotpl/
 COPY init /docker-entrypoint-init.d/
