--- a/test/8/docker-compose.yml
+++ b/test/8/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - ./server.conf:/var/www/html/server.conf
   drupal:
     image: drupal:8-fpm
+    image: drupal:7-fpm
+    image: wodby/drupal6
     volumes:
       - codebase:/var/www/html
 
