--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,9 @@ env:
     - DRUPAL_VER=7 NGINX_VER=1.12
     - DRUPAL_VER=6 NGINX_VER=1.12
 
-before_install:
+install:
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce="${DOCKER_VERSION}~ce-0~ubuntu"
-
-install:
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
@@ -38,7 +36,7 @@ after_success: |
     make release
 
     if [ -n "$TRAVIS_TAG" ]; then
-      make VERSION="$DRUPAL_VER-$NGINX_VER-$TRAVIS_TAG" release
+      make release TAG="$DRUPAL_VER-$NGINX_VER-$TRAVIS_TAG"
     fi
 
     if [ "$DRUPAL_VER" == "$LATEST_DRUPAL_VER" && "$NGINX_VER" == "$LATEST_NGINX_VER" ]; then
