--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
     - DOCKER_VERSION=17.06.2
     - LATEST_DRUPAL_VER=8
     - LATEST_NGINX_VER=1.13
+    - FROM_STABILITY_TAG=""
   matrix:
     - DRUPAL_VER=8 NGINX_VER=1.13
     - DRUPAL_VER=7 NGINX_VER=1.13
