--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce="${DOCKER_VERSION}~ce-0~ubuntu"
   - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
 
@@ -32,15 +32,15 @@ script:
   - make && make test
 
 after_success: |
-  if [ "$TRAVIS_PULL_REQUEST" == "false" ] && ([ "$TRAVIS_BRANCH" == "master" ] || [ -n "$TRAVIS_TAG" ]); then
-    docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+  if [[ "${TRAVIS_PULL_REQUEST}" == "false" && ("${TRAVIS_BRANCH}" == "master"  || -n "${TRAVIS_TAG}") ]]; then
+    docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
     make release
 
-    if [ -n "$TRAVIS_TAG" ]; then
-      make release TAG="$DRUPAL_VER-$NGINX_VER-$TRAVIS_TAG"
+    if [[ -n "${TRAVIS_TAG}" ]]; then
+      make release TAG="${DRUPAL_VER}-${NGINX_VER}-${TRAVIS_TAG}"
     fi
 
-    if [ "$DRUPAL_VER" == "$LATEST_DRUPAL_VER" && "$NGINX_VER" == "$LATEST_NGINX_VER" ]; then
-      make release TAG=latest
+    if [[ "${DRUPAL_VER}" == "${LATEST_DRUPAL_VER}" && "${NGINX_VER}" == "${LATEST_NGINX_VER}" ]]; then
+      make release TAG="latest"
     fi
   fi
