--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ env:
     - LATEST_TAG="8-1.13"
     - FROM_STABILITY_TAG=""
   matrix:
-    - DRUPAL_VER=8 NGINX_VER=1.13 TAG=$(DRUPAL_VER)-$(NGINX_VER)
-    - DRUPAL_VER=7 NGINX_VER=1.13 TAG=$(DRUPAL_VER)-$(NGINX_VER)
-    - DRUPAL_VER=6 NGINX_VER=1.13 TAG=$(DRUPAL_VER)-$(NGINX_VER)
-    - DRUPAL_VER=8 NGINX_VER=1.12 TAG=$(DRUPAL_VER)-$(NGINX_VER)
-    - DRUPAL_VER=7 NGINX_VER=1.12 TAG=$(DRUPAL_VER)-$(NGINX_VER)
-    - DRUPAL_VER=6 NGINX_VER=1.12 TAG=$(DRUPAL_VER)-$(NGINX_VER)
+    - DRUPAL_VER=8 NGINX_VER=1.13 TAG=8-1.13
+    - DRUPAL_VER=7 NGINX_VER=1.13 TAG=7-1.13
+    - DRUPAL_VER=6 NGINX_VER=1.13 TAG=6-1.13
+    - DRUPAL_VER=8 NGINX_VER=1.12 TAG=8-1.12
+    - DRUPAL_VER=7 NGINX_VER=1.12 TAG=7-1.12
+    - DRUPAL_VER=6 NGINX_VER=1.12 TAG=6-1.12
 
 install:
   - sudo apt-get update
