--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ env:
   global:
     - DOCKER_COMPOSE_VERSION=1.10.0
     - DOCKER_VERSION=17.06.2
-    - LATEST_TAG="8-1.13"
-    - FROM_STABILITY_TAG="3.0.1"
+    - LATEST_TAG=8-1.13
+    - FROM_STABILITY_TAG=""
   matrix:
     - DRUPAL_VER=8 NGINX_VER=1.13 TAG=8-1.13
     - DRUPAL_VER=7 NGINX_VER=1.13 TAG=7-1.13
@@ -33,11 +33,14 @@ script:
 after_success: |
   if [[ "${TRAVIS_PULL_REQUEST}" == "false" && ("${TRAVIS_BRANCH}" == "master"  || -n "${TRAVIS_TAG}") ]]; then
     docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
-    make release
 
     if [[ -n "${TRAVIS_TAG}" ]]; then
-      make release TAG="${DRUPAL_VER}-${NGINX_VER}-${TRAVIS_TAG}"
-    elif [[ "${DRUPAL_VER}" == "${LATEST_DRUPAL_VER}" && "${NGINX_VER}" == "${LATEST_NGINX_VER}" ]]; then
+      export STABILITY_TAG="${TRAVIS_TAG}"
+    fi
+
+    make release
+
+    if [[ "${TAG}" == "${LATEST_TAG}" ]]; then
       make release TAG="latest"
     fi
   fi
