--- a/.travis.yml
+++ b/.travis.yml
@@ -15,27 +15,10 @@ env:
     - DRUPAL_VER=6 NGINX_VER=1.12 TAG=6-1.12
 
 script:
-  - |
-    make
-    make test
+  - make && make test
 
-    if [[ "${TRAVIS_PULL_REQUEST}" == "false" && ("${TRAVIS_BRANCH}" == "master"  || -n "${TRAVIS_TAG}") ]]; then
-      docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
-
-      if [[ -n "${TRAVIS_TAG}" ]]; then
-        export STABILITY_TAG="${TRAVIS_TAG}"
-      fi
-
-      make release
-
-      if [[ -n "${EXTRA_TAG}" ]]; then
-        make release TAG="${EXTRA_TAG}"
-      fi
-
-      if [[ "${TAG}" == "${LATEST_TAG}" ]]; then
-        make release TAG="latest"
-      fi
-    fi
+after_success:
+  - bash "${TRAVIS_BUILD_DIR}/travis-release.sh"
 
 notifications:
   on_failure: never
