--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,14 @@ services:
 
 env:
   global:
-    - LATEST_TAG=8-1.13
+    - LATEST_TAG=8-1.14
   matrix:
+    - DRUPAL_VER=8 NGINX_VER=1.14 TAG=8-1.14 EXTRA_TAG=8
+    - DRUPAL_VER=7 NGINX_VER=1.14 TAG=7-1.14 EXTRA_TAG=7
+    - DRUPAL_VER=6 NGINX_VER=1.14 TAG=6-1.14 EXTRA_TAG=6
     - DRUPAL_VER=8 NGINX_VER=1.13 TAG=8-1.13
     - DRUPAL_VER=7 NGINX_VER=1.13 TAG=7-1.13
     - DRUPAL_VER=6 NGINX_VER=1.13 TAG=6-1.13
-    - DRUPAL_VER=8 NGINX_VER=1.12 TAG=8-1.12
-    - DRUPAL_VER=7 NGINX_VER=1.12 TAG=7-1.12
-    - DRUPAL_VER=6 NGINX_VER=1.12 TAG=6-1.12
 
 script:
   - make && make test
